   was returned. (Patch by Amoser)
 * Issue #272: (Linux) Porcess.get_open_files() - potential race condition can
   lead to unexpected NoSuchProcess exception.  Also, we can get incorrect
   reports of not absolutized path names.
 * Issue #275: (Linux) Process.get_io_counters() erroneously raise NoSuchProcess
   on old Linux versions. Where not available it now raises NotImplementedError.

API CHANGES

 * psutil.get_process_list() is deprecated.
 * ppid, name, exe, cmdline and create_time properties of Process class are now
   cached after being accessed, meaning NoSuchProcess will no longer be raised
   in case the process is gone in the meantime.
 * psutil.STATUS_* constants can now be compared by using their string
   representation.


0.4.1 - 2011-12-14
------------------

BUGFIXES

 * Issue 228: some example scripts were not working with python 3.
 * Issue 230: (Windows / OSX) memory leak in Process.get_connections().
 * Issue 232: (Linux) psutil.phymem_usage() can report erroneous values which
   are different than "free" command.
 * Issue 236: (Windows) memory/handle leak in Process's get_memory_info(),
   suspend() and resume() methods.


0.4.0 - 2011-10-29
------------------

NEW FEATURES

 * Issue 150: network I/O counters. (OSX patch by Jeremy Whitlock)
 * Issue 154: (FreeBSD) add support for process getcwd()
 * Issue 157: (Windows) provide installer for Python 3.2 64-bit.
 * Issue 198: Process.wait(timeout=0) can now be used to make wait() return
   immediately.
 * Issue 206: disk I/O counters. (OSX patch by Jeremy Whitlock)
 * Issue 213: examples/iotop.py script.
 * Issue 217: Process.get_connections() now has a "kind" argument to filter
   for connections with different criteria.
 * Issue 221: (FreeBSD) Process.get_open_files has been rewritten in C and no
   longer relies on lsof.
 * Issue 223: examples/top.py script.
 * Issue 227: examples/nettop.py script.

BUGFIXES

 * Issue 135: (OS X) psutil cannot create Process object